--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   sliding_up_panel: ^0.3.6
   flutter_spinkit: "^4.1.1"
   http: ^0.12.0+4
+#  expandable: ^4.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
